import type { IMessageType } from '@protobuf-ts/runtime';
import {
    CnAlarmNotification,
    CnNodeNotification,
    CnRmiAsyncConfirm,
    CnRmiAsyncRequest,
    CnRmiAsyncResponse,
    CnRmiRequest,
    CnRmiResponse,
    CnRpdoNotification,
    CnRpdoRequest,
    CnTimeConfirm,
    CnTimeRequest,
    NullMessage,
    Opcode,
    RegisterDeviceRequest,
    StartSessionConfirm,
    StartSessionRequest,
} from './protocol/comfoConnect';

export type OpcodeMessageType<T extends Opcode> = (typeof opcodes)[T] extends IMessageType<infer U>? U : never;

export const opcodes = {
    [Opcode.NO_OPERATION]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_ADDRESS_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.REGISTER_DEVICE_REQUEST]: RegisterDeviceRequest as IMessageType<RegisterDeviceRequest>,
    [Opcode.START_SESSION_REQUEST]: StartSessionRequest as IMessageType<StartSessionRequest>,
    [Opcode.CLOSE_SESSION_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.LIST_REGISTERED_APPS_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.UNREGISTER_DEVICE_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CHANGE_PIN_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_REMOTE_ACCESS_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_REMOTE_ACCESS_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_SUPPORT_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_SUPPORT_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_WEB_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_WEB_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_PUSH_ID_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.DEBUG_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.UPGRADE_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_DEVICE_SETTINGS_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.VERSION_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_ADDRESS_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.REGISTER_DEVICE_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.START_SESSION_CONFIRM]: StartSessionConfirm as IMessageType<StartSessionConfirm>,
    [Opcode.CLOSE_SESSION_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.LIST_REGISTERED_APPS_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.UNREGISTER_DEVICE_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CHANGE_PIN_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_REMOTE_ACCESS_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_REMOTE_ACCESS_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_SUPPORT_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_SUPPORT_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GET_WEB_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_WEB_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_PUSH_ID_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.DEBUG_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.UPGRADE_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.SET_DEVICE_SETTINGS_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.VERSION_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.GATEWAY_NOTIFICATION]: NullMessage as IMessageType<NullMessage>,
    [Opcode.KEEP_ALIVE]: NullMessage as IMessageType<NullMessage>,
    [Opcode.FACTORY_RESET]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_TIME_REQUEST]: CnTimeRequest as IMessageType<CnTimeRequest>,
    [Opcode.CN_TIME_CONFIRM]: CnTimeConfirm as IMessageType<CnTimeConfirm>,
    [Opcode.CN_NODE_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_NODE_NOTIFICATION]: CnNodeNotification as IMessageType<CnNodeNotification>,
    [Opcode.CN_RMI_REQUEST]: CnRmiRequest as IMessageType<CnRmiRequest>,
    [Opcode.CN_RMI_RESPONSE]: CnRmiResponse as IMessageType<CnRmiResponse>,
    [Opcode.CN_RMI_ASYNC_REQUEST]: CnRmiAsyncRequest as IMessageType<CnRmiAsyncRequest>,
    [Opcode.CN_RMI_ASYNC_CONFIRM]: CnRmiAsyncConfirm as IMessageType<CnRmiAsyncConfirm>,
    [Opcode.CN_RMI_ASYNC_RESPONSE]: CnRmiAsyncResponse as IMessageType<CnRmiAsyncResponse>,
    [Opcode.CN_RPDO_REQUEST]: CnRpdoRequest as IMessageType<CnRpdoRequest>,
    [Opcode.CN_RPDO_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_RPDO_NOTIFICATION]: CnRpdoNotification as IMessageType<CnRpdoNotification>,
    [Opcode.CN_ALARM_NOTIFICATION]: CnAlarmNotification as IMessageType<CnAlarmNotification>,
    [Opcode.CN_FUP_READ_REGISTER_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_READ_REGISTER_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_BEGIN_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_BEGIN_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_END_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_PROGRAM_END_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_READ_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_READ_CONFIRM]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_RESET_REQUEST]: NullMessage as IMessageType<NullMessage>,
    [Opcode.CN_FUP_RESET_CONFIRM]: NullMessage as IMessageType<NullMessage>,
} as const;

export const requestMessages = {
    [Opcode.REGISTER_DEVICE_REQUEST]: Opcode.REGISTER_DEVICE_CONFIRM,
    [Opcode.START_SESSION_REQUEST]: Opcode.START_SESSION_CONFIRM,
    [Opcode.CN_RMI_ASYNC_REQUEST]: Opcode.CN_RMI_ASYNC_CONFIRM,
    [Opcode.CN_RPDO_REQUEST]: Opcode.CN_RPDO_CONFIRM,
    [Opcode.CN_TIME_REQUEST]: Opcode.CN_TIME_CONFIRM,
    [Opcode.KEEP_ALIVE]: Opcode.NO_OPERATION,
    [Opcode.FACTORY_RESET]: Opcode.NO_OPERATION,
    [Opcode.SET_ADDRESS_REQUEST]: Opcode.SET_ADDRESS_CONFIRM,
    [Opcode.CLOSE_SESSION_REQUEST]: Opcode.CLOSE_SESSION_CONFIRM,
    [Opcode.LIST_REGISTERED_APPS_REQUEST]: Opcode.LIST_REGISTERED_APPS_CONFIRM,
    [Opcode.UNREGISTER_DEVICE_REQUEST]: Opcode.UNREGISTER_DEVICE_CONFIRM,
    [Opcode.CHANGE_PIN_REQUEST]: Opcode.CHANGE_PIN_CONFIRM,
    [Opcode.GET_REMOTE_ACCESS_ID_REQUEST]: Opcode.GET_REMOTE_ACCESS_ID_CONFIRM,
    [Opcode.SET_REMOTE_ACCESS_ID_REQUEST]: Opcode.SET_REMOTE_ACCESS_ID_CONFIRM,
    [Opcode.GET_SUPPORT_ID_REQUEST]: Opcode.GET_SUPPORT_ID_CONFIRM,
    [Opcode.SET_SUPPORT_ID_REQUEST]: Opcode.SET_SUPPORT_ID_CONFIRM,
    [Opcode.GET_WEB_ID_REQUEST]: Opcode.GET_WEB_ID_CONFIRM,
    [Opcode.SET_WEB_ID_REQUEST]: Opcode.SET_WEB_ID_CONFIRM,
    [Opcode.SET_PUSH_ID_REQUEST]: Opcode.SET_PUSH_ID_CONFIRM,
    [Opcode.DEBUG_REQUEST]: Opcode.DEBUG_CONFIRM,
    [Opcode.UPGRADE_REQUEST]: Opcode.UPGRADE_CONFIRM,
    [Opcode.SET_DEVICE_SETTINGS_REQUEST]: Opcode.SET_DEVICE_SETTINGS_CONFIRM,
    [Opcode.VERSION_REQUEST]: Opcode.VERSION_CONFIRM,
    [Opcode.CN_RMI_REQUEST]: Opcode.CN_RMI_RESPONSE,
    [Opcode.CN_FUP_READ_REGISTER_REQUEST]: Opcode.CN_FUP_READ_REGISTER_CONFIRM,
    [Opcode.CN_FUP_PROGRAM_BEGIN_REQUEST]: Opcode.CN_FUP_PROGRAM_BEGIN_CONFIRM,
    [Opcode.CN_FUP_PROGRAM_REQUEST]: Opcode.CN_FUP_PROGRAM_CONFIRM,
    [Opcode.CN_FUP_PROGRAM_END_REQUEST]: Opcode.CN_FUP_PROGRAM_END_CONFIRM,
    [Opcode.CN_FUP_READ_REQUEST]: Opcode.CN_FUP_READ_CONFIRM,
    [Opcode.CN_FUP_RESET_REQUEST]: Opcode.CN_FUP_RESET_CONFIRM,
} as const;
